code/devops/k8s/Ingress/nginx-ingress.yaml
apiVersion: extensions/v1bate1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - http:
      paths:
        - path: /user
          backend:
            serviceName: service-user-v1
            serverPort: 80
        - path: /pay
          backend:
            serviceName: service-pay-v1
            serverPort: 80
   backend:
     serviceName: service-user-v1
     serverPort: 80
